--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Capriola&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-capriola: "Capriola";
+  --font-arial: Arial, Helvetica, sans-serif;
+}
+
+:root {
+  font-family: var(--font-capriola);
+}
