add default color

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --color-primary: #a08861;
   --color-secondary: #cbbd9a;
   --color-accent: #f4c971;
+  --color-default: #1e1e1e;
   --color-careSky: #c3ebfa;
   --color-careSkyLight: #edf9fd;
   --color-carePurple: #cfceff;
