add hover effect color

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --font-arial: Arial, Helvetica, sans-serif;
   --color-primary: #a08861;
   --color-secondary: #cbbd9a;
+  --color-hover: #978d72;
   --color-accent: #f4c971;
   --color-default: #1e1e1e;
   --color-careSky: #c3ebfa;
